--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12"
@@ -41,6 +42,7 @@
     "@types/react-native": "~0.63.2",
     "jest": "^26.6.3",
     "jest-expo": "~40.0.0",
+    "prettier": "2.2.1",
     "typescript": "~4.0.0"
   },
   "private": true
