--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "5.11.2",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
+    "@reduxjs/toolkit": "^1.5.0",
     "expo": "~40.0.0",
     "expo-asset": "~8.2.1",
     "expo-constants": "~9.3.0",
@@ -33,7 +34,10 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -51,6 +55,7 @@
     "jest": "^26.6.3",
     "jest-expo": "~40.0.0",
     "prettier": "2.2.1",
+    "redux-devtools": "^3.7.0",
     "typescript": "~4.0.0"
   },
   "private": true
