--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prettier": "2.2.1",
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.4",
     "typescript": "~4.0.0"
   },
   "private": true
