--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
